--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -21,7 +21,7 @@ server {
 
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
+    error_page  400 500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
